--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,10 @@
 header#main-header {
     width: 100%;
     height: 60px;
-    background: blue;
+    background: rgb(7, 7, 7);
     font-size: 30px;
     font-weight: bold;
-    color: #fff;
+    color: rgb(54, 250, 4);
     display: flex;
     justify-content: center;
     align-items: center;
